--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="dev.jahir.blueprint.app">
+    package="com.noobies.nothingmuch">
 
     <!-- Permission required for donations. Remove it if you don't use it -->
     <uses-permission android:name="com.android.vending.BILLING" />
 
     <application
-        android:name=".MyApplication"
+        android:name="com.noobies.nothingmuch.MyApplication"
         android:allowBackup="true"
         android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,7 +18,7 @@
         tools:ignore="UnusedAttribute">
 
         <activity
-            android:name=".MainActivity"
+            android:name="com.noobies.nothingmuch.MainActivity"
             android:label="@string/app_name"
             android:exported="true">
 
@@ -235,7 +235,7 @@
 
         <!-- Muzei Service -->
         <provider
-            android:name=".MuzeiService"
+            android:name="com.noobies.nothingmuch.MuzeiService"
             android:authorities="${applicationId}.muzei"
             android:exported="true"
             android:icon="@drawable/ic_muzei_icon"
